# alignmenter

./: .gitignore  404.html  AGENTS.md  CNAME  README.md  mkdocs.yml  sitemap.xml
alignmenter/: .env.example  LICENSE  Makefile  README.md  pyproject.toml
alignmenter/alignmenter/: __init__.py  cli.py  config.py  run_config.py  runner.py
alignmenter/alignmenter/alignmenter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alignmenter/alignmenter/providers/: __init__.py  anthropic.py  base.py  embeddings.py  judges.py  local.py  openai.py
alignmenter/alignmenter/reports/: html.py
alignmenter/alignmenter/scorers/: authenticity.py  safety.py  stability.py
alignmenter/alignmenter/utils/: __init__.py  tokens.py
alignmenter/configs/: demo_config.yaml
alignmenter/datasets/: README.md  demo_conversations.jsonl
alignmenter/docs/: persona_annotation.md
alignmenter/scripts/: bootstrap_dataset.py  calibrate_persona.py  run_openai_demo.py  sanitize_dataset.py
alignmenter/src/alignmenter/: __init__.py  cli.py  config.py  runner.py
alignmenter/src/alignmenter/calibration/: analyze.py  diagnose.py  validate.py
alignmenter/src/alignmenter/judges/: __init__.py  authenticity_judge.py  prompts.py
alignmenter/src/alignmenter/providers/: __init__.py  classifiers.py  embeddings.py  judges.py  openai.py
alignmenter/src/alignmenter/reporting/: html.py
alignmenter/src/alignmenter/scorers/: authenticity.py
alignmenter/src/alignmenter/utils/: io.py
alignmenter/tests/: conftest.py  test_authenticity_judge.py  test_calibrate_persona.py  test_cli_helpers.py  test_cli_init.py  test_cli_run_config.py  test_config.py  test_judge_providers.py  test_persona_gpt.py  test_provider_openai.py  test_providers.py  test_run_config_loader.py  test_runner.py  test_scorers.py
alignmenter/tests/data/: mini_cli_dataset.jsonl
calibration/: README.md  calibration-requirements.md
docs/: alignmenter_requirements.md  calibration_requirements.md  competitive_landscape.md  contributing.md  index.md  llm_judge_authenticity.md  (+3 more)
(+109 files in other folders)
