[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignmenter"
version = "0.0.1"
description = "Alignment auditing toolkit scaffold"
authors = [{name = "Alignmenter"}]
readme = "README.md"
dependencies = [
  "typer[all]",
  "pydantic",
  "openai>=1.0.0",
  "pyyaml>=6.0",
  "sentence-transformers>=2.2.2",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
alignmenter = "alignmenter.cli:app"

[tool.setuptools.packages.find]
where = ["alignmenter"]
