[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignmenter"
version = "0.0.1"
description = "Alignment auditing toolkit scaffold"
authors = [{name = "Alignmenter"}]
readme = "README.md"
dependencies = [
  "typer[all]",
  "pydantic",
  "pydantic-settings>=2.0",
  "openai>=1.0.0",
  "pyyaml>=6.0",
  "sentence-transformers>=2.2.2",
  "torch",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
alignmenter = "alignmenter.cli:app"

[tool.setuptools.packages.find]
where = ["alignmenter"]
