[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alignmenter"
version = "0.0.1"
description = "Alignment auditing toolkit scaffold"
authors = [{name = "Alignmenter"}]
readme = "README.md"
dependencies = [
  "typer[all]",
  "pydantic",
  "pydantic-settings>=2.0",
  "openai>=1.12.0",
  "pyyaml>=6.0",
  "sentence-transformers>=2.2.2",
  "torch",
  "tiktoken>=0.7.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
safety = ["transformers>=4.30.0"]

[project.scripts]
alignmenter = "alignmenter.cli:app"

[tool.setuptools]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
